--- a/DesktopApp/MainWindow.xaml
+++ b/DesktopApp/MainWindow.xaml
@@ -3,34 +3,60 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:json ="clr-namespace:Newtonsoft.Json;assembly=Newtonsoft.Json"
+        xmlns:jlinq ="clr-namespace:Newtonsoft.Json.Linq;assembly=Newtonsoft.Json"
         xmlns:local="clr-namespace:DesktopApp.Converters"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-
+        Title="MainWindow" Height="1000" Width="600">
     <Window.Resources>
-        <local:ParameterConverter x:Key="ParameterConverter"></local:ParameterConverter>
+        <local:MethodToValueConverter x:Key="MethodToValueConverter"/>
+        <HierarchicalDataTemplate DataType="{x:Type jlinq:JArray}" ItemsSource="{Binding Converter={StaticResource MethodToValueConverter}, ConverterParameter='Children'}">
+            <TextBlock Text="Array">
+            </TextBlock>
+        </HierarchicalDataTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type jlinq:JProperty}" ItemsSource="{Binding Converter={StaticResource MethodToValueConverter}, ConverterParameter='Children'}">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Property name: "/>
+                <TextBlock Text="{Binding Path=Name, Mode=OneWay}"/>
+            </StackPanel>
+        </HierarchicalDataTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type jlinq:JObject}" ItemsSource="{Binding Converter={StaticResource MethodToValueConverter}, ConverterParameter='Children'}">
+            <TextBlock Text="Object">
+            </TextBlock>
+        </HierarchicalDataTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type jlinq:JConstructor}" ItemsSource="{Binding Converter={StaticResource MethodToValueConverter}, ConverterParameter='Children'}">
+            <TextBlock Text="Constructor">
+            </TextBlock>
+        </HierarchicalDataTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type jlinq:JRaw}" ItemsSource="{Binding Converter={StaticResource MethodToValueConverter}, ConverterParameter='Children'}">
+            <TextBlock Text="Raw">
+            </TextBlock>
+        </HierarchicalDataTemplate>
+        <DataTemplate DataType="{x:Type jlinq:JValue}">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Value: "/>
+                <TextBox Text="{Binding Path=Value, Mode=TwoWay}"/>
+            </StackPanel>
+        </DataTemplate>
     </Window.Resources>
-    
+
+
     <Grid>
         <Label Content="Host" HorizontalAlignment="Left" Margin="25,36,0,0" VerticalAlignment="Top"/>
         <TextBox Name="Host" HorizontalAlignment="Left" Height="23" Margin="96,40,0,0"  TextWrapping="Wrap" Text="{Binding Host, Mode=TwoWay}" VerticalAlignment="Top" Width="120"/>
         <Label Content="Port" HorizontalAlignment="Left" Margin="25,65,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.151,0.406" Width="42"/>
         <TextBox Name="Port" HorizontalAlignment="Left" Height="23" Margin="94,68,0,0" TextWrapping="Wrap" Text="{Binding Port, Mode=TwoWay}" VerticalAlignment="Top" Width="122" RenderTransformOrigin="0.555,-1.405"/>
-        <Button Content="Start Server" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding StartServer}" Margin="395,40,0,0">
-            <Button.CommandParameter>
-                <MultiBinding Converter="{StaticResource ParameterConverter}">
-                    <Binding  ElementName="Host" Path="Text"/>
-                    <Binding ElementName="Port" Path="Text"/>
-                </MultiBinding>
-            </Button.CommandParameter>
-        </Button>
-        <TextBox Name="Message" HorizontalAlignment="Left" Margin="25,163,0,0" TextWrapping="Wrap" Text="{Binding Chat, Mode=TwoWay}" VerticalAlignment="Top" Width="317" Height="118"/>
-        <Button Content="Send" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding SendMessage}" Margin="395,163,0,0">
-            <Button.CommandParameter>
-                <MultiBinding Converter="{StaticResource ParameterConverter}">
-                    <Binding Path="Host" ElementName="Message"/>
-                </MultiBinding>
-            </Button.CommandParameter>
-        </Button>
+        <Button Content="Start Server" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding StartServerCommand}" Margin="395,40,0,0"/>
+        <TextBox Name="Message" HorizontalAlignment="Left" Margin="25,163,0,0" TextWrapping="Wrap" Text="{Binding Chat, Mode=TwoWay}" VerticalAlignment="Top" Width="218" Height="231"/>
+        <Button Content="Send" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding SendMessageCommand}" Margin="263,220,0,0"/>
+        <TreeView Name="JsonTreeView" HorizontalAlignment="Left" Height="784" Margin="307,163,0,0" VerticalAlignment="Top" Width="275" ItemsSource="{Binding JsonToken}">
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="IsExpanded" Value="True" />
+                </Style>
+            </TreeView.ItemContainerStyle>
+        </TreeView>
+
+
     </Grid>
 </Window>
