--- a/DesktopApp/MainWindow.xaml
+++ b/DesktopApp/MainWindow.xaml
@@ -41,15 +41,15 @@
     </Window.Resources>
 
 
-    <Grid>
+    <Grid Background="Turquoise"  >
         <Label Content="Host" HorizontalAlignment="Left" Margin="25,36,0,0" VerticalAlignment="Top"/>
         <TextBox Name="Host" HorizontalAlignment="Left" Height="23" Margin="96,40,0,0"  TextWrapping="Wrap" Text="{Binding Host, Mode=TwoWay}" VerticalAlignment="Top" Width="120"/>
         <Label Content="Port" HorizontalAlignment="Left" Margin="25,65,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.151,0.406" Width="42"/>
         <TextBox Name="Port" HorizontalAlignment="Left" Height="23" Margin="94,68,0,0" TextWrapping="Wrap" Text="{Binding Port, Mode=TwoWay}" VerticalAlignment="Top" Width="122" RenderTransformOrigin="0.555,-1.405"/>
         <Button Content="Start Server" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding StartServerCommand}" Margin="395,40,0,0"/>
-        <TextBox Name="Message" HorizontalAlignment="Left" Margin="25,163,0,0" TextWrapping="Wrap" Text="{Binding Chat, Mode=TwoWay}" VerticalAlignment="Top" Width="218" Height="231"/>
-        <Button Content="Send" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding SendMessageCommand}" Margin="263,220,0,0"/>
-        <TreeView Name="JsonTreeView" HorizontalAlignment="Left" Height="784" Margin="307,163,0,0" VerticalAlignment="Top" Width="275" ItemsSource="{Binding JsonToken}">
+        <TextBox Name="Message" HorizontalAlignment="Left" Margin="25,111,0,0" TextWrapping="Wrap" Text="{Binding Chat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="445" Height="81" RenderTransformOrigin="0.503,0.238"/>
+        <Button Content="Send" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Command="{Binding SendMessageCommand}" Margin="495,111,0,0" RenderTransformOrigin="2.451,0.8"/>
+        <TreeView Name="JsonTreeView" HorizontalAlignment="Left" Height="618" Margin="25,213,0,0" VerticalAlignment="Top" Width="275" ItemsSource="{Binding JsonToken, UpdateSourceTrigger=PropertyChanged}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="True" />
